--- a/settings.json
+++ b/settings.json
@@ -7,29 +7,31 @@
 	"editor.detectIndentation": false,
 	"editor.insertSpaces": false,
 	"editor.tabSize": 4,
-	"editor.renderWhitespace": "all",
+	"editor.renderWhitespace": "boundary",
 	"workbench.activityBar.visible": false,
 	"workbench.statusBar.visible": false,
-	"workbench.colorTheme": "Default High Contrast",
+	"workbench.colorTheme": "Visual Studio Dark - C++",
 	"window.zoomLevel": 0,
-	"editor.fontSize": 14,
-	"workbench.editor.tabSizing": "shrink",
+	"editor.fontSize": 13,
 	"breadcrumbs.enabled" : false,
-	"workbench.editor.showTabs": true,
-	"editor.guides.indentation": true,
-	"workbench.colorCustomizations": {
-
+	"workbench.colorCustomizations":
+	{
 		"editor.background": "#000000",
-		"editorLineNumber.foreground": "#3f3f3f",
+		"panel.background": "#000000",
+		"sideBar.background": "#000000",
+		"tab.inactiveBackground": "#000000",
+		"tab.activeBackground": "#242424",
+		"editorGroupHeader.tabsBackground": "#000000",
 		"sideBar.foreground": "#a3a3a3",
-		"tab.inactiveForeground": "#a3a3a3",
-		"editorGroup.border": "#a3a3a3",
-		"panel.border": "#a3a3a3",
-		"sideBar.border": "#a3a3a3",
-		"editorGroupHeader.border": "#a3a3a3",
-		"tab.border": "#a3a3a3",
-		"editorIndentGuide.activeBackground": "#fd6500",
-		"editorIndentGuide.background": "#3f3f3f",
-		"editor.selectionBackground": "#949494",
-	}
+		"sideBar.border": "#242424",
+		"editorGroupHeader.border": "#242424",
+		"editorIndentGuide.activeBackground": "#666666",
+		"editorIndentGuide.background": "#242424",
+		"editor.selectionBackground": "#00566b",
+		"editor.lineHighlightBackground": "#2c2c2c"
+	},
+	"editor.tokenColorCustomizations":
+	{
+		"comments": "#757575"
+	},
 }
