--- a/settings.json
+++ b/settings.json
@@ -14,6 +14,7 @@
 	"window.zoomLevel": 0,
 	"editor.fontSize": 13,
 	"breadcrumbs.enabled" : false,
+	"editor.minimap.enabled": false,
 	"workbench.colorCustomizations":
 	{
 		"editor.background": "#000000",
